--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   <div>
     <h1>Jared Benman</h1>
     <section>Introduction</section>
-    <p>I am from Detroit, Michigan.</p>
+    <p>I am from Detroit, Michigan. This is my third year at IIT. I've recently been learning new hobbies 
+      such as the guitar and sketching. Other hobbies I enjoy are reading books, playing video games, 
+      video editing, and shopping.</p>
     <section>Education</section>
     <ul>
       <li>I am pursing a bachelor's degree in Information Technology.</li>
       <li>I've taken previous classes such as ITMD 361 & 362, which are focused on web design.</li>
+      <li>I don't have any professional experience with web design, but my goal in my career is 
+        to come a UI designer.</li>
     </ul>
   </div>
 </body>
