added final css styles

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <ul>
       <li>I am pursing a bachelor's degree in Information Technology.</li>
       <li>I've taken previous classes such as ITMD 361 & 362, which are focused on web design.</li>
-      <li>I don't have any professional experience with web design, but my goal in my career is 
-        to come a UI designer.</li>
+      <li>I don't have any professional experience with web design, but my dream career is 
+        becoming a UI designer.</li>
     </ul>
   </div>
 </body>
