fixed section tags

--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
 <body>
   <div>
     <h1>Jared Benman</h1>
-    <section>Introduction</section>
-    <p>I am from Detroit, Michigan. This is my third year at IIT. I've recently been learning new hobbies 
-      such as the guitar and sketching. Other hobbies I enjoy are reading books, playing video games, 
-      video editing, and shopping.</p>
-    <section>Education</section>
-    <ul>
-      <li>I am pursing a bachelor's degree in Information Technology.</li>
-      <li>I've taken previous classes such as ITMD 361 & 362, which are focused on web design.</li>
-      <li>I don't have any professional experience with web design, but my dream career is 
-        becoming a UI designer.</li>
-    </ul>
+    <section>
+      <h2>Introduction</h2>
+      <p>I am from Detroit, Michigan. This is my third year at IIT. I've recently been learning new hobbies 
+        such as the guitar and sketching. Other hobbies I enjoy are reading books, playing video games, 
+        video editing, and shopping.</p>
+    </section>
+    <section>
+      <h2>Education</h2>
+      <ul>
+        <li>I am pursing a bachelor's degree in Information Technology.</li>
+        <li>I've taken previous classes such as ITMD 361 & 362, which are focused on web design.</li>
+        <li>I don't have any professional experience with web design, but my dream career is 
+          becoming a UI designer.</li>
+      </ul>
+    </section>
   </div>
 </body>
 </html>
